2008-10-26 Andreas Kirschbaum

	* Make scroll bar in inventory view work.

2008-10-25  Andreas Kirschbaum

	* Add JUnit archive to project.

2008-09-14  Andreas Kirschbaum

	* Fix crashes in inventory dialog and server selection window due
	to race conditions between GUI and server socket threads.

2008-09-13  Andreas Kirschbaum

	* Do not insert stray repeat count when entering commands with /
	key.

2008-09-06  Andreas Kirschbaum

	* Replace empty faces with arrows in "Click here to see
	next/previous group of items" buttons.

	* Remove arrow buttons from ground view. Requires a Crossfire
	server supporting the "num_look_objects" setup option (r9810).
	Older servers do work but ground view scrolling does not work.
	Makes prelude skin's ground view functional.

	* Fix inventory window:
	- Show items when scrolling down.
	- When moving the selection, make sure the last row is shown even
	if only partially filled.

2008-09-03  Andreas Kirschbaum

	* Fix inventory window sometimes showing only one column.

	* Suppress error messages "updateItem: undefined item ..." for
	upditem commands updating face information only. Such messages are
	sent by the server for invisible items.

2008-07-07  Andreas Kirschbaum

	* Display information about selected item in inventory view.

	* Retain the selection when dropping items.

2008-07-06  Andreas Kirschbaum

	* Rewrite inventory dialog. Now key bindings are supported:
	- cursor keys move the selection
	- d drops the selected item
	- e examines the selected item
	- m marks the selected item
	- l locks the selected item
	- L unlocks the selected item
	- a and ENTER apply the selected item
	- page_up and page_down scroll the list
	The inventory dialog is not modal. So all other keys are matched
	against the key bindings which allows picking items from the
	ground.

2008-07-04  Andreas Kirschbaum

	* Remove meta_element skin command since it is not needed anymore.

	* Fix crash while drawing the log window.
