@@ -1,5 +1,7 @@
 2008-10-26 Andreas Kirschbaum
 
+	* Fix disappearing password dialog issue.
+
 	* Make scroll bar in inventory view work.
 
 2008-10-25  Andreas Kirschbaum
